homelab/manifests/base/apps/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wallabag-images
              mountPath: /var/www/wallabag/web/assets/images
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
      volumes:
        - name: wallabag-images
          persistentVolumeClaim:
            claimName: wallabag-images
